load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "distsql",
    srcs = [
        "distsql.go",
        "request_builder.go",
        "select_result.go",
    ],
    importpath = "github.com/pingcap/tidb/distsql",
    visibility = ["//visibility:public"],
    deps = [
        "//config",
        "//ddl/placement",
        "//errno",
        "//infoschema",
        "//kv",
        "//metrics",
        "//sessionctx",
        "//sessionctx/stmtctx",
        "//sessionctx/variable",
        "//statistics",
        "//store/copr",
        "//tablecodec",
        "//telemetry",
        "//types",
        "//util/chunk",
        "//util/codec",
        "//util/collate",
        "//util/dbterror",
        "//util/execdetails",
        "//util/logutil",
        "//util/memory",
        "//util/ranger",
        "//util/trxevents",
        "//vendor/github.com/opentracing/opentracing-go",
        "//vendor/github.com/pingcap/errors",
        "//vendor/github.com/pingcap/failpoint",
        "//vendor/github.com/pingcap/kvproto/pkg/metapb",
        "//vendor/github.com/pingcap/tidb/parser/mysql",
        "//vendor/github.com/pingcap/tidb/parser/terror",
        "//vendor/github.com/pingcap/tipb/go-tipb",
        "//vendor/github.com/tikv/client-go/v2/metrics",
        "//vendor/github.com/tikv/client-go/v2/tikv",
        "//vendor/github.com/tikv/client-go/v2/tikvrpc",
        "//vendor/github.com/tikv/client-go/v2/tikvrpc/interceptor",
        "//vendor/go.uber.org/zap",
        "//vendor/golang.org/x/exp/maps",
        "//vendor/golang.org/x/exp/slices",
        "//vendor/google.golang.org/grpc/metadata",
    ],
)

go_test(
    name = "distsql_test",
    timeout = "short",
    srcs = [
        "bench_test.go",
        "distsql_test.go",
        "main_test.go",
        "request_builder_test.go",
        "select_result_test.go",
    ],
    embed = [":distsql"],
    flaky = True,
    race = "on",
    deps = [
        "//kv",
        "//sessionctx",
        "//sessionctx/stmtctx",
        "//sessionctx/variable",
        "//statistics",
        "//store/copr",
        "//tablecodec",
        "//testkit/testsetup",
        "//types",
        "//util/benchdaily",
        "//util/chunk",
        "//util/codec",
        "//util/collate",
        "//util/disk",
        "//util/execdetails",
        "//util/mathutil",
        "//util/memory",
        "//util/mock",
        "//util/paging",
        "//util/ranger",
        "//vendor/github.com/pingcap/tidb/parser/charset",
        "//vendor/github.com/pingcap/tidb/parser/mysql",
        "//vendor/github.com/pingcap/tipb/go-tipb",
        "//vendor/github.com/stretchr/testify/require",
        "//vendor/github.com/tikv/client-go/v2/kv",
        "//vendor/github.com/tikv/client-go/v2/tikv",
        "//vendor/github.com/tikv/client-go/v2/tikvrpc",
        "//vendor/go.uber.org/goleak",
    ],
)
