load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "adapter.go",
        "aggregate.go",
        "analyze.go",
        "builder.go",
        "compiler.go",
        "ddl.go",
        "distsql.go",
        "executor.go",
        "explain.go",
        "grant.go",
        "join.go",
        "merge_join.go",
        "metrics.go",
        "new_distsql.go",
        "new_join.go",
        "prepared.go",
        "revoke.go",
        "set.go",
        "show.go",
        "simple.go",
        "sort.go",
        "union_scan.go",
        "write.go",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//ast:go_default_library",
        "//context:go_default_library",
        "//distsql:go_default_library",
        "//distsql/xeval:go_default_library",
        "//expression:go_default_library",
        "//infoschema:go_default_library",
        "//inspectkv:go_default_library",
        "//kv:go_default_library",
        "//model:go_default_library",
        "//mysql:go_default_library",
        "//parser:go_default_library",
        "//plan:go_default_library",
        "//privilege:go_default_library",
        "//sessionctx:go_default_library",
        "//sessionctx/variable:go_default_library",
        "//sessionctx/varsutil:go_default_library",
        "//statistics:go_default_library",
        "//table:go_default_library",
        "//tablecodec:go_default_library",
        "//terror:go_default_library",
        "//util:go_default_library",
        "//util/charset:go_default_library",
        "//util/codec:go_default_library",
        "//util/mvmap:go_default_library",
        "//util/ranger:go_default_library",
        "//util/sqlexec:go_default_library",
        "//util/types:go_default_library",
        "//vendor/github.com/juju/errors:go_default_library",
        "//vendor/github.com/ngaut/log:go_default_library",
        "//vendor/github.com/pingcap/tipb/go-tipb:go_default_library",
        "//vendor/github.com/prometheus/client_golang/prometheus:go_default_library",
        "//vendor/golang.org/x/net/context:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["executor_pkg_test.go"],
    library = ":go_default_library",
    deps = [
        "//kv:go_default_library",
        "//tablecodec:go_default_library",
        "//vendor/github.com/pingcap/check:go_default_library",
    ],
)

go_test(
    name = "go_default_xtest",
    srcs = [
        "aggregate_test.go",
        "analyze_test.go",
        "ddl_test.go",
        "distsql_test.go",
        "executor_test.go",
        "explain_test.go",
        "grant_test.go",
        "join_test.go",
        "merge_join_test.go",
        "metrics_test.go",
        "prepared_test.go",
        "revoke_test.go",
        "set_test.go",
        "show_test.go",
        "simple_test.go",
        "statement_context_test.go",
        "union_scan_test.go",
        "write_test.go",
    ],
    deps = [
        ":go_default_library",
        "//:go_default_library",
        "//ast:go_default_library",
        "//context:go_default_library",
        "//expression:go_default_library",
        "//inspectkv:go_default_library",
        "//kv:go_default_library",
        "//model:go_default_library",
        "//mysql:go_default_library",
        "//parser:go_default_library",
        "//plan:go_default_library",
        "//privilege/privileges:go_default_library",
        "//sessionctx:go_default_library",
        "//sessionctx/variable:go_default_library",
        "//sessionctx/varsutil:go_default_library",
        "//store/tikv:go_default_library",
        "//table:go_default_library",
        "//tablecodec:go_default_library",
        "//terror:go_default_library",
        "//util:go_default_library",
        "//util/mock:go_default_library",
        "//util/testkit:go_default_library",
        "//util/testleak:go_default_library",
        "//util/testutil:go_default_library",
        "//util/types:go_default_library",
        "//vendor/github.com/juju/errors:go_default_library",
        "//vendor/github.com/ngaut/log:go_default_library",
        "//vendor/github.com/pingcap/check:go_default_library",
    ],
)
